--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "wrangler": "^3.0.0"
   },
   "dependencies": {
+    "@upstash/ratelimit": "^1.0.0",
+    "@upstash/redis": "^1.27.1",
     "hono": "^3.11.10",
     "http-status-codes": "^2.3.0",
     "is-ip": "^5.0.1"
