--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@upstash/redis": "^1.27.1",
     "hono": "^3.11.10",
     "http-status-codes": "^2.3.0",
-    "is-ip": "^5.0.1"
+    "is-ip": "^5.0.1",
+    "lru-cache": "^10.1.0"
   }
 }
