--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy --keep-vars",
-    "dev": "wrangler dev",
-    "start": "wrangler dev"
+    "dev": "wrangler dev --test-scheduled",
+    "start": "wrangler dev",
+    "schema-generate": "npx drizzle-kit generate:sqlite",
+    "schema-publish-local": "wrangler d1 execute tacint-ms-db --local --file=./drizzle/XXXX_X_X.sql",
+    "schema-up": "drizzle-kit up:sqlite",
+    "schema-dropall": "drizzle-kit drop"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
+    "drizzle-kit": "^0.20.9",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0"
   },
   "dependencies": {
-    "@upstash/ratelimit": "^1.0.0",
-    "@upstash/redis": "^1.27.1",
+    "drizzle-orm": "^0.29.2",
     "hono": "^3.11.10",
     "http-status-codes": "^2.3.0",
-    "is-ip": "^5.0.1",
-    "lru-cache": "^10.1.0"
+    "is-ip": "^5.0.1"
   }
 }
