--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
 		// "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
 		"types": [
 			"@cloudflare/workers-types/2023-07-01",
-			"types/hono.d.ts"
+			"types/*.d.ts"
 		] /* Specify type package names to be included without being referenced in a source file. */,
 		// "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
 		"resolveJsonModule": true /* Enable importing .json files */,
