--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.29.2",
     "hono": "^3.11.10",
     "http-status-codes": "^2.3.0",
-    "is-ip": "^5.0.1"
+    "is-ip": "^5.0.1",
+    "rate-limiter-flexible": "^4.0.0"
   }
 }
